[tool.poetry]
name = "word-cloud-demo"
version = "0.1.0"
description = ""
authors = ["tebukuro <58774766+tebukurokun@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wordcloud = "^1.8.1"
Janome = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
